--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
       <title>Viendo Cajas</title>
 </head>
 <body>
-      <img src="file:///C:/Users/Alumna/Desktop/GabrielaGonzalez/ViendoCajas/logo.png">
+      <img src="logo.png">
       <h1>Laboratoria</h1>
-          <p> 
-          Laboratoria enseña a <em>jóvenes mujeres</em> a crear productos digitales con el propósito de instalar a la creciente economìa digital de México</p>
+         
+          <p>Laboratoria enseña a <em>jóvenes mujeres</em> a crear productos digitales con el propósito de instalar a la creciente economìa digital de México</p>
 
           <p>
             En un periodo de 6 meses, nuestras coders aprenden:
