--- a/index.html
+++ b/index.html
@@ -5,27 +5,26 @@
       <title>Viendo Cajas</title>
 </head>
 <body>
+    <div style="background:purple; color:white">
       <img src="logo.png">
       <h1>Laboratoria</h1>
          
           <p>Laboratoria enseña a <em>jóvenes mujeres</em> a crear productos digitales con el propósito de instalar a la creciente economìa digital de México</p>
 
-          <p>
-            En un periodo de 6 meses, nuestras coders aprenden:
-         </p>
-
+          <p>En un periodo de 6 meses, nuestras coders aprenden:</p>
+    </div>
         <ol> 
 
-        <strong><li>El lenguaje del futuro</li></strong>
+            <strong><li>El lenguaje del futuro</strong>
           
-                 <p> La programación está detrás de todos los productos digitales que usamos dìa a dìa.  Nuestras coders aprenden HTML, CC3 y Java Script, terminando preparadas para crear infinitos productos y soluciones web.</p>
- 
-        <strong><li>Aprender a aprender</li></strong>
+                        <p>La programación está detrás de todos los productos digitales que usamos dìa a dìa.  Nuestras coders aprenden HTML, CC3 y Java Script, terminando preparadas para crear infinitos productos y soluciones web.</p>
+                   </li>
 
-          <p>Para triunfar como desarrolladora web nuestras coder se convierten en autodidactas, descubriendo que no hay lìmites para seguir creciendo en este campo</p>
+            <strong><li>Aprender a aprender</strong>
+
+                        <p>Para triunfar como desarrolladora web nuestras coder se convierten en autodidactas, descubriendo que no hay lìmites para seguir creciendo en este campo</p>
+                   </li>
         </ol>
-
-
 </body>
 
 </html>
